snapshots/com/wadpam/openserver/errors/1-SNAPSHOT/errors-1-20121002.045704-1-sources.jar.sha1
a7b8a2808c6f7d8a9be2c1946557bbc894f9d30e